# collatex

./: .env.example  .gitignore  AGENTS.md  Dockerfile  Makefile  README.md  SECURITY.md  SPECIFICATIONS.md  coverage.xml  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yaml
apps/collab_gateway/: .eslintrc.cjs  Dockerfile  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
apps/collab_gateway/src/: index.ts  metrics.ts
apps/collab_gateway/src/types/: y-websocket.d.ts
apps/collab_gateway/tests/: server.test.ts
apps/frontend/: .eslintrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/frontend/public/latexwasm/: PdfTeXEngine.js
apps/frontend/public/swiftlatex/: README.md
apps/frontend/public/tectonic/: README.md  tectonic_init.js
apps/frontend/public/texbundle/: manifest.json
apps/frontend/src/: App.tsx  config.ts  debug.ts  index.css  main.tsx  tectonic.d.ts  token.ts  ws.ts
apps/frontend/src/api/: client.ts  compile.ts
apps/frontend/src/components/: AppShell.tsx  BuildLog.tsx  CodeMirror.tsx  CompileButton.tsx  Editor.tsx  EditorPage.tsx  MathJaxPreview.tsx  PdfExportButton.tsx  PdfViewer.tsx  SettingsModal.tsx  Spinner.tsx  ThemeToggle.tsx  Toast.tsx
apps/frontend/src/hooks/: useCollabDoc.ts  useProject.ts
apps/frontend/tests/: compileButton.test.tsx  compileFlow.test.tsx  editorPage.test.tsx  editorPage.websocket.test.tsx  mathjaxPreview.test.tsx  pdfExport.test.tsx  pdfGenerator.worker.test.ts  swiftlatex.test.ts  swiftlatexClient.test.ts  swiftlatexServer.ts  tectonic.test.ts  wasm-swiftlatex.worker.test.ts  wasm-tectonic.worker.test.ts  wasmTex.test.ts  wsConnection.test.ts  wsHook.test.ts
backend/compile-service/: README.md  main.py  pyproject.toml
backend/compile-service/app/: jobs.py  main.py  models.py
backend/compile-service/src/collatex/: auth.py  metrics.py  models.py  redis_store.py  settings.py  tasks.py
backend/compile-service/src/compile_service/: auth.py  executor.py  logging.py  main.py  queue.py  queue_memory.py  queue_redis.py  sandbox.py  worker.py
backend/compile-service/src/compile_service/app/: config.py  jobs.py  logging.py  main.py  middleware.py  models.py  rate_limit.py  security.py  state.py  state_memory.py  state_redis.py  storage.py  worker.py
backend/compile-service/tests/: conftest.py  helpers.py  test_api_async.py  test_api_latency.py  test_auth.py  test_celery.py  test_compile.py  test_compile_success.py  test_cors.py  test_executor_stub.py  test_health.py  test_jobs.py  test_jwt_flow.py  test_limits.py  test_logging.py  test_logs.py  test_metrics.py  test_pdf.py  test_placeholder_pdf.py  test_project_flow.py  test_queue.py  test_rate_limit.py  test_root.py  test_security.py  test_sse.py  test_state_redis.py  test_validation.py
examples/minimal/: main.tex  refs.bib
scripts/: check_redis.py  dev-login.sh  dev_local.sh  fetch-swiftlatex-assets.sh  fetch-tectonic-assets.sh  fetch_busytex_assets.js  smoke.sh
src/collatex/: __init__.py
(+26 files in other folders)
