[project]
name = "collatex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Aki Rehn", email = "aki@rehn.fi" }
]
requires-python = ">=3.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.17.0",
    "pytest>=8.4.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.12.5",
    "uv>=0.8.3",
]
