[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"

[project]
name = 'compile_service'
version = '0.1.0'
requires-python = '>=3.12'
dependencies = [
  'fastapi>=0.111',
  'uvicorn>=0.30',
  'pydantic>=2.7',
  'python-multipart>=0.0.9',
  'structlog>=24.1.0',
  'prometheus_client>=0.20.0',
]

[project.optional-dependencies]
dev = [
  'pytest>=8',
  'httpx>=0.27',
  'mypy>=1.10',
  'ruff>=0.5',
]

[tool.ruff]
line-length = 100
[tool.ruff.format]
quote-style = 'single'

[tool.ruff.lint]
extend-select = ['Q']

[tool.ruff.lint.flake8-quotes]
inline-quotes = 'single'

[tool.mypy]
python_version = '3.12'
strict = true
